CLI: add -p acm (ActiveMime) flag

--- a/testdata/.gitattributes
+++ b/testdata/.gitattributes
@@ -9,18 +9,22 @@
 *.dotm diff=hsvba
 *.doc diff=hsvba
 *.dot diff=hsvba
+*.xml diff=hsvba
 *.pptm diff=hsvba
 *.potm diff=hsvba
 *.ppsm diff=hsvba
 *.ppam diff=hsvba
 *.ppa diff=hsvba
+*.ppt diff=hsvba
+*.pot diff=hsvba
+*.pps diff=hsvba
 *.otm diff=hsvba
 *.pub diff=hsvba
 *.vsdm diff=hsvba
 *.vstm diff=hsvba
 *.vssm diff=hsvba
-*.vsd diff=hsvba
-*.vst diff=hsvba
-*.vss diff=hsvba
+*.vdx diff=hsvba
+*.vtx diff=hsvba
+*.vsx diff=hsvba
 *.mpp diff=hsvba
 *.mpt diff=hsvba
